# nooboard

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  blueprint.md  stage1.md  stage2-result.md  stage2.md  stage3-result.md  stage3-validation.md  stage3.md  stage4-1.md  stage4-api.md  stage4-develop.md  stage4-result.md  stage4.md  stage5-gpui-architecture.md  stage5-home-quick-hifi.md  stage5-visual-spec.md  stage5-wireframe.md
crates/nooboard-app/: Cargo.toml
crates/nooboard-app/src/: clipboard_runtime.rs  error.rs  lib.rs  service.rs  status.rs
crates/nooboard-app/src/config/: defaults.rs  io.rs  mapping.rs  mod.rs  node_id.rs  noob_id.rs  schema.rs  tests.rs  validate.rs
crates/nooboard-app/src/service/: events.rs  mappers.rs  mod.rs  state.rs  types.rs
crates/nooboard-app/src/service/app/: clipboard_history.rs  config_patch_network.rs  config_patch_storage.rs  config_transcation.rs  engine.rs  files.rs  mod.rs  network.rs  outbox_dispatcher.rs  subscriptions.rs
crates/nooboard-app/src/service/app/control/: actor.rs  clipboard_history.rs  command.rs  config_patch.rs  engine_reconcile.rs  files.rs  local_connection.rs  mod.rs  outbox.rs  state.rs  subscriptions.rs
crates/nooboard-app/src/service/types/: clipboard.rs  events.rs  file_transfer.rs  history.rs  identity.rs  mod.rs  network.rs  time.rs
crates/nooboard-app/src/storage_runtime/: actor.rs  client.rs  commands.rs  mod.rs  repository.rs  signature.rs  tests.rs
crates/nooboard-app/src/sync_runtime/: bridge.rs  commands.rs  lifecycle.rs  mod.rs  state.rs  subscriptions.rs
crates/nooboard-app/tests/: app_service_clipboard.rs  app_service_config_patch.rs  app_service_settings.rs  app_service_stage4.rs  app_service_state.rs  app_service_transfers.rs  desktop_app_service.rs
crates/nooboard-app/tests/support/: mod.rs
crates/nooboard-cli/: Cargo.toml
crates/nooboard-cli/src/: config.rs  main.rs
crates/nooboard-config/: Cargo.toml
crates/nooboard-config/src/: defaults.rs  error.rs  io.rs  lib.rs  mapping.rs  noob_id.rs  schema.rs  tests.rs  validate.rs
crates/nooboard-config/src/bootstrap/: env.rs  init.rs  launch.rs  mod.rs  paths.rs  resolve.rs  spec.rs  template.rs
crates/nooboard-desktop/: Cargo.toml  build.rs
crates/nooboard-desktop/src/: app.rs  main.rs
crates/nooboard-desktop/src/state/: app_store.rs  clipboard.rs  live_app.rs  live_commands.rs  mod.rs  transfer.rs  transfer_telemetry.rs  ui_store.rs
crates/nooboard-desktop/src/ui/: mod.rs  theme.rs
crates/nooboard-desktop/src/ui/bootstrap/: mod.rs  state.rs  view.rs
crates/nooboard-desktop/src/ui/quick_panel/: mod.rs  view.rs
crates/nooboard-desktop/src/ui/workspace/view/: mod.rs
crates/nooboard-desktop/src/ui/workspace/view/activity_rail/: mod.rs  panels.rs
crates/nooboard-desktop/src/ui/workspace/view/clipboard/: actions.rs  detail.rs  guards.rs  header.rs  history.rs  mod.rs  page_state.rs  snapshot.rs  state.rs  targets.rs
crates/nooboard-desktop/src/ui/workspace/view/clipboard/components/: cards.rs  chrome.rs  controls.rs  mod.rs
crates/nooboard-desktop/src/ui/workspace/view/components/: command_bar.rs  console_pill.rs  data_cell.rs  mod.rs  pulse_beacon.rs  section_header.rs  summary_card.rs  titlebar_brand.rs  titlebar_chip.rs
crates/nooboard-desktop/src/ui/workspace/view/home/: feed.rs  mod.rs  recent_activity.rs  snapshot.rs  system_core.rs
crates/nooboard-desktop/src/ui/workspace/view/home/components/: activity.rs  mod.rs
crates/nooboard-desktop/src/ui/workspace/view/home/system_core/: clipboard.rs  controls.rs  header.rs  mod.rs  radar.rs
crates/nooboard-desktop/src/ui/workspace/view/peers/: header.rs  list.rs  mod.rs  page_state.rs  snapshot.rs
crates/nooboard-desktop/src/ui/workspace/view/peers/components/: chrome.rs  controls.rs  mod.rs  table.rs
crates/nooboard-desktop/src/ui/workspace/view/settings/: advanced.rs  apply.rs  clipboard.rs  derived.rs  draft_ops.rs  header.rs  mod.rs  network.rs  page_state.rs  patches.rs  section_state.rs  snapshot.rs  storage.rs  transfers.rs
crates/nooboard-desktop/src/ui/workspace/view/settings/components/: chrome.rs  controls.rs  mod.rs  rows.rs
crates/nooboard-desktop/src/ui/workspace/view/shared/: activity.rs  animation.rs  layout.rs  mod.rs  status.rs  time.rs
crates/nooboard-desktop/src/ui/workspace/view/sidebar/: mod.rs  navigation.rs
crates/nooboard-desktop/src/ui/workspace/view/transfer_rail/: mod.rs  sections.rs  summary.rs
crates/nooboard-desktop/src/ui/workspace/view/transfers/: activity.rs  downloads.rs  header.rs  mod.rs  page_state.rs  snapshot.rs  uploads.rs
crates/nooboard-desktop/src/ui/workspace/view/transfers/components/: cards.rs  chrome.rs  controls.rs  mod.rs
crates/nooboard-platform-macos/: Cargo.toml
crates/nooboard-platform-macos/src/: lib.rs  observer.rs  pasteboard.rs
crates/nooboard-platform-windows/: Cargo.toml
crates/nooboard-platform-windows/src/: clipboard.rs  encoding.rs  lib.rs  observer.rs
crates/nooboard-platform-windows/tests/: clipboard_windows.rs
crates/nooboard-storage/: Cargo.toml
crates/nooboard-storage/sql/bootstrap/: schema.sql
crates/nooboard-storage/sql/queries/: insert_event.sql  list_history.sql  list_history_with_cursor.sql  outbox_enqueue.sql  outbox_list_due.sql  outbox_mark_retry.sql  outbox_mark_sent.sql  outbox_try_lease.sql  search_history.sql  select_event_by_id.sql
crates/nooboard-storage/src/: config.rs  error.rs  lib.rs  model.rs  repository.rs  sql_catalog.rs
crates/nooboard-sync/: Cargo.toml
crates/nooboard-sync/src/: auth.rs  config.rs  discovery.rs  engine.rs  error.rs  lib.rs  protocol.rs  transport.rs
crates/nooboard-sync/src/connection/: actor.rs  mod.rs  path.rs  receiver.rs  sender.rs  stream.rs
crates/nooboard-sync/src/discovery/: mdns.rs  mod.rs
crates/nooboard-sync/src/engine/: candidates.rs  connect.rs  handshake.rs  ingress.rs  mod.rs  peers.rs  policy.rs  runtime.rs  types.rs
crates/nooboard-sync/src/session/: actor.rs  mod.rs  outbox.rs  path.rs  receiver.rs  sender.rs  stream.rs
crates/nooboard-sync/tests/: p2p_file_transfer.rs
(+26 files in other folders)
