[workspace]
members = [
  "crates/nooboard-core",
  "crates/nooboard-platform",
  "crates/nooboard-platform-macos",
  "crates/nooboard-storage",
  "crates/nooboard-sync",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["nooboard contributors"]

[workspace.dependencies]
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs", "net", "io-util"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
uuid = { version = "1.21.0", features = ["v7"] }
bincode = "1.3.3"
bytes = "1.11.1"
futures = "0.3.32"
hex = "0.4.3"
hmac = "0.12.1"
rcgen = "0.14.7"
rustls = "0.23.36"
serde_bytes = "0.11.19"
sha2 = "0.10.9"
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.18", features = ["codec"] }
tempfile = "3.26.0"
mdns-sd = "0.18.0"
if-addrs = "0.15.0"
