[package]
name = "nooboard-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nooboard-platform = { path = "../nooboard-platform" }
nooboard-storage = { path = "../nooboard-storage" }
nooboard-sync = { path = "../nooboard-sync" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
