[package]
name = "nooboard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
nooboard-core = { path = "../nooboard-core" }
nooboard-platform = { path = "../nooboard-platform" }
nooboard-platform-macos = { path = "../nooboard-platform-macos" }
nooboard-storage = { path = "../nooboard-storage" }
nooboard-sync = { path = "../nooboard-sync" }
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
