[package]
name = "nooboard-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nooboard-storage = { path = "../nooboard-storage" }
nooboard-sync = { path = "../nooboard-sync" }
clap.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
