[package]
name = "nooboard-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
nooboard-app = { path = "../nooboard-app" }
