[package]
name = "nooboard-storage"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror.workspace = true
toml = "1.0.3"
