[package]
name = "nooboard-sync"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
hex.workspace = true
hmac.workspace = true
if-addrs.workspace = true
mdns-sd.workspace = true
postcard.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
serde_bytes.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
